# arpi_server

./: .env  .env.prod  .env.prod_v2  .env.test  .env.test_v2  .env.vbox  .env.vbox_v2  .env_prod  .gitignore  .pylintrc  MANIFEST.in  Pipfile  README.md  Taskfile.yml  create_package.sh  mcp3008_reader.sh  prod.env  pyproject.toml  setup.py  spi_loopback_test.sh  test.env
.github/: dependabot.yml
.github/workflows/: release-production.yml  release-version.yml
etc/: wifi-watchdog.sh
etc/mosquitto/: ssl-certbot.conf  ssl-self-signed.conf
etc/mqtt/: mosquitto.conf
etc/nginx/: nginx.conf
etc/nginx/sites-available/: argus.conf  http.conf  local.conf  remote.conf
etc/nginx/snippets/: application.conf  cors.conf  restapi.conf
etc/nginx/ssl/: arpi_app.key  arpi_ca.crt
etc/systemd/: argus_monitor.service  argus_server.service
migrations/: env.py
migrations/versions/: 1d2b1100bda5_.py  43a24ca7b746_sensor_channel_type_and_error_state.py  4df9df54d928_user_mcp_key.py  4f8202bcfbba_.py  5169b6306036_sensor_contact_type.py  5bccaa26edb4_.py  710d6b5f7f5b_sensor_eol_count.py  865d107141bb_.py  88226184f921_.py  a52f2c4be768_.py  aa035fa3c9a6_.py  b525bd3091af_.py  b525bd3091af_initial_schema.py  c180da8f93a4_.py  c62c0e73219f_.py  d3663af259a5_.py  dee8e993625e_.py  e72781fbd520_.py  e72781fbd520_monitoring_and_naming_for_sensors.py
scripts/: bump_version.py  create_bootstrap_package.sh  create_package.sh  get_package_version.sh  install.py  start_database.sh  start_mcp_inspector.sh  start_mqtt.sh  start_nginx.sh
scripts/nginx/: nginx.conf.template
src/: constants.py  data.py  hash.py  models.py  new_registration_code.py  secret.py  simulator.py  tester.py  update_user.py
src/install/: __main__.py  helpers.py
src/install/installers/: __init__.py  base.py  certbot.py  database.py  hardware.py  mqtt.py  nginx.py  service.py  system.py
src/installer/: cli.py  helpers.py
src/installer/installers/: __init__.py  base.py  certbot.py  database.py  hardware.py  mqtt.py  nginx.py  service.py  system.py
src/installer/installers/etc/mosquitto/: acl.conf  auth.conf
src/installer/installers/etc/nginx/: nginx.conf
src/installer/installers/etc/nginx/sites-available/: http.conf
src/installer/installers/etc/nginx/snippets/: application.conf  mcp.conf  restapi.conf  self-signed.conf  ssl.conf
src/installer/installers/etc/systemd/: argus_mcp.service  argus_monitor.service  argus_server.service
src/mcp_server/: __init__.py  area.py  auth.py  card.py  errors.py  monitoring.py  output.py  prompts.py  sensor.py  user.py  zone.py
src/mcp_server/models/: arm.py  zone.py
src/mcp_server/namespaces/: area.py  arm.py  card.py  clock.py  generic.py  keypad.py  monitoring.py  output.py  prompts.py  sensor.py  user.py  zone.py
src/mcp_server/namespaces/option/: __init__.py  alert_sensitivity.py  dyndns.py  gsm.py  location.py  mqtt.py  smtp.py  ssh.py  subscriptions.py  syren.py
src/mcp_server/option/: alert_sensitivity.py  mqtt.py  ssh.py  syren.py
src/mcp_server/prompts/: general_system.txt  setup_wizard_sensors_system.txt
src/monitor/: __init__.py  __main__.py  alert.py  area_handler.py  background_service.py  broadcast.py  config_helper.py  connection.py  database.py  gunicorn.conf.py  history.py  ipc.py  keypad_handler.py  logger.py  logging.py  monitor.py  sensor_handler.py  service.py  socket_io.py  storage.py  syren.py
src/monitor/adapters/: __init__.py  gsm.py  keypad.py  output.py  output_base.py  output_v2.py  output_v3.py  power.py  power_base.py  power_v.py  power_v2.py  power_v3.py  relay.py  sensor.py  sensor_base.py  sensor_v2.py  sensor_v3.py  smtp.py  syren.py
src/monitor/adapters/keypads/: __init__.py  base.py  delay.py  dsc.py  wiegand.py
src/monitor/adapters/mock/: MCP3008.py  gpio.py  gsm.py  input.py  keypad.py  mcp3008.py  output.py  power.py  relay.py  sensor.py  spi.py  utils.py  wiegand.py
src/monitor/communication/: __init__.py  mqtt.py
src/monitor/config/: base.py  helper.py  models.py  registry.py
src/monitor/notifications/: __init__.py  notification.py  notifier.py  templates.py
src/monitor/output/: __init__.py  handler.py  notification.py  sign.py
src/monitor/sensor/: detector.py  handler.py  history.py  wirings.py
src/monitoring/: __main__.py  alert.py  broadcast.py  constants.py  database.py  ipc.py  monitor.py  socket_io.py  storage.py  syren.py
src/monitoring/adapters/: gsm.py  keypad.py  power.py  sensor.py  syren.py
src/monitoring/adapters/keypads/: base.py  delay.py  dsc.py  wiegand.py
src/monitoring/adapters/mock/: MCP3008.py  gsm.py  keypad.py  output.py
src/monitoring/notifications/: notification.py  notifier.py  templates.py
src/server/: __init__.py  database.py  decorators.py  gunicorn.conf.py  ipc.py  tools.py  version.json  version.py
src/server/blueprints/: alert.py  area.py  arm.py  card.py  clock.py  config.py  generic.py  keypad.py  monitor.py  option.py  output.py  power.py  sensor.py  user.py  zone.py
src/server/services/: area.py  arm.py  base.py  card.py  clock.py  keypad.py  monitor.py  output.py  sensor.py  user.py  zone.py
src/server/services/option/: __init__.py  alert_sensitivity.py  dyndns.py  gsm.py  location.py  mqtt.py  smtp.py  ssh.py  subscriptions.py  syren.py
src/simulator/: simulator.py  simulator.tcss
src/tools/: certbot.py  clock.py  connection.py  dictionary.py  dyndns.py  formatter.py  lock.py  queries.py  schedule.py  ssh.py  ssh_keymanager.py  ssh_service.py
src/utils/: constants.py  dictionary.py  formatter.py  models.py  queries.py
src/wiegand/: wiegand_io.cpp  wiegand_setup.py
