[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arpi-server"
dynamic = ["version"]
description = "The backend service of the ArPI security system running on the Raspberry PI"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "ArPI Home Security"}
]
keywords = ["security", "home-automation", "raspberry-pi", "alarm-system"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Home Automation",
    "Topic :: Security",
]

dependencies = [
    "bcrypt~=5.0",
    "flask~=3.1",
    "flask-cors~=6.0",
    "flask-migrate~=4.1",
    "flask-sqlalchemy~=3.1",
    "gunicorn~=23.0",
    "noipy~=1.5.3",
    "paho-mqtt~=2.1",
    "psycopg2-binary~=2.9",
    "python-crontab~=2.7.0",
    "python-gsmmodem-new~=0.13.0",
    "python-jose~=3.5",
    "python-socketio~=5.14",
    "stringcase~=1.2.0",
]

[project.optional-dependencies]
dev = [
    "black~=23.12",
    "cryptography~=46.0",
    "rope~=1.13",
]
simulator = [
    "textual~=5.3",
    "textual-dev",
]
device = [
    "pywiegand==0.5.2",
]

[project.urls]
Homepage = "https://www.arpi-security.info/"
Documentation = "https://docs.arpi-security.info/"
Demo = "https://demo.arpi-security.info/"
Repository = "https://github.com/ArPIHomeSecurity/arpi_server"

[project.scripts]
arpi-certbot = "bin.certbot:main"
arpi-clock = "bin.clock:main"
arpi-data = "bin.data:main"
arpi-dyndns = "bin.dyndns:main"
arpi-hash = "bin.hash:main"
arpi-secret = "bin.secret:main"
arpi-simulator = "bin.simulator:main"
arpi-ssh-keymanager = "bin.ssh_keymanager:main"
arpi-ssh-service = "bin.ssh_service:main"
arpi-tester = "bin.tester:main"
arpi-update-user = "bin.update_user:main"
arpi-upgrade = "bin.upgrade:main"
arpi-status = "installer.cli:status_standalone"

[tool.setuptools]
packages = {find = {where = ["src"]}}

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
server = ["version.json"]

[tool.setuptools.data-files]
"etc/arpi-server/" = ["config.env"]
"share/arpi-server/migrations" = [
    "migrations/alembic.ini",
    "migrations/env.py",
    "migrations/README",
    "migrations/script.py.mako",
]
"share/arpi-server/migrations/versions" = ["migrations/versions/*.py"]

[tool.setuptools.dynamic]
version = {attr = "server.version.__package_version__"}

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
